--- a/lab1/hw1.html
+++ b/lab1/hw1.html
@@ -9,9 +9,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Your Name Here" />
+<meta name="author" content="Renxiao Deng" />
 
-<meta name="date" content="2026-01-05" />
+<meta name="date" content="2026-01-06" />
 
 <title>Lab 1 Homework</title>
 
@@ -375,8 +375,8 @@ display: none;
 
 
 <h1 class="title toc-ignore">Lab 1 Homework</h1>
-<h4 class="author">Your Name Here</h4>
-<h4 class="date">2026-01-05</h4>
+<h4 class="author">Renxiao Deng</h4>
+<h4 class="date">2026-01-06</h4>
 
 </div>
 
@@ -387,28 +387,31 @@ display: none;
 RMarkdown. Please embed all of your code and push the final work to your
 repository. Your report should be organized, clean, and run free from
 errors. Remember, you must remove the <code>#</code> for any included
-code chunks to run.</p>
-<p><strong>1. Please tell us why you are taking BIS 15L.</strong></p>
-<p><strong>2. Do you have any coding experience? If yes, please tell us
+code chunks to run. <br></p>
+<p><strong>1. Please tell us why you are taking BIS 15L.</strong><br>
+Because it is required for by system and synthetic biology class and it
+can help me better with my stats class which also use R for labs. <br>
+<strong>2. Do you have any coding experience? If yes, please tell us
 what languages you have coded in and your level of
-experience.</strong></p>
-<p><strong>3. Navigate to the <code>datascibiol</code> repository on
+experience.</strong><br> Yes, I’ve coded in python with some entry level
+experiences and I know some basic website design knowledge.<br>
+<strong>3. Navigate to the <code>datascibiol</code> repository on
 GitHub. Notice that near the bottom there is a description of the
 repository. You want something like this on your repository! It is built
 by making edits to the <code>README.md</code> file using RMarkdown. Edit
 your repository’s <code>README.md</code> file so that you have an
 informative description, including your email address. Be creative! You
 don’t need to just copy mine. There are lots of examples
-online.</strong></p>
-<p><strong>4. Please put a link to your GitHub repository
-below.</strong></p>
-<p><strong>5. Make sure that your repository includes the practice file
-<code>dummy_push</code> from lab 1.2. If you have not done so already,
-please add your name to this file, knit it, and push it to your
-repository.</strong></p>
+online.</strong><br />
+Done it! <br> <strong>4. Please put a link to your GitHub repository
+below.</strong> <br> <a href="https://github.com/Dale1031/BIS15L_W26_RenxiaoDeng.git" class="uri">https://github.com/Dale1031/BIS15L_W26_RenxiaoDeng.git</a>
+<br> <strong>5. Make sure that your repository includes the practice
+file <code>dummy_push</code> from lab 1.2. If you have not done so
+already, please add your name to this file, knit it, and push it to your
+repository.</strong> <br></p>
 </div>
 <div id="knit-and-upload" class="section level2">
-<h2>Knit and Upload</h2>
+<h2>Knit and Upload <br></h2>
 <p>Please knit your work as an .html file and upload to Canvas. Homework
 is due before the start of the next lab. No late work is accepted. Make
 sure to use the formatting conventions of RMarkdown to make your report
